Bug 711914 - Fetching bookmarks information during onBeforeItemRemove may break the bookmarks cache. r=dietrich